Add new version code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=network
+spring.data.mongodb.uri=mongodb://localhost:27017/social-network
+spring.servlet.multipart.max-file-size = 6MB
+spring.servlet.multipart.max-request-size = 6MB
+spring.security.user.name=admin
